--- a/src/Sass/style.scss
+++ b/src/Sass/style.scss
@@ -17,7 +17,7 @@ a{
 @import '../ShoppingBag/shoppingCart';
 @import '../containers/productDetails';
 @import '../containers/productComponent';
-
+@import '../component/Homepage';
 @import '../Components/Banner/Banner';
 @import '../containers/Pagination';
 @import '../Sass/mobile';
