--- a/src/Components/Banner/_Banner.scss
+++ b/src/Components/Banner/_Banner.scss
@@ -58,6 +58,11 @@
     
     margin: auto;
     .banner-left{
+        text-align: center;
+font: normal normal 600 48px/60px Source Serif Pro;
+letter-spacing: 0px;
+color: #FFFFFF;
+opacity: 1;
         @extend .display-xl-48-dekstop-only;
         
 
