--- a/src/Components/sidebar/_Sidebar.scss
+++ b/src/Components/sidebar/_Sidebar.scss
@@ -22,6 +22,7 @@
 }
 .sidebar-demo{
     @extend .regualr-body-m-16-;
+    text-align: left;
 }
 .Attribute-first {
   
@@ -67,4 +68,5 @@
     margin-right: 0.5rem;
 
 }
+
 
