--- a/src/PlaceOrder/_Order.scss
+++ b/src/PlaceOrder/_Order.scss
@@ -1,4 +1,5 @@
 .order-page {
+    padding-bottom: 3em;
     h1 {
         text-align: center;
         font: normal normal 600 48px/45px Source Serif Pro;
@@ -101,11 +102,13 @@
         opacity: 1;
     }
 }
-.media-icon{
-    ul{
+
+.media-icon {
+    ul {
         display: flex;
         justify-content: space-evenly;
-        li{
+
+        li {
             list-style-type: none;
         }
     }
@@ -122,14 +125,14 @@
         opacity: 1;
         padding: 0.5em 0 0.5em 0;
         overflow: hidden;
-        max-width: 15rem;
+        max-width: 13rem;
         white-space: nowrap;
-        text-overflow: ellipsis;
-        @extend .regular-heading-m-16-
-
+        text-overflow: clip;
+        @extend .regular-heading-m-16-;
     }
 
     p {
+       @extend .display-l-36-;
         text-align: left;
         font: normal normal normal 16px/24px Muli;
         letter-spacing: 0px;
@@ -137,19 +140,21 @@
         opacity: 1;
     }
 }
-.shopitems{
+
+.shopitems {
 
     margin-top: 2em;
     margin-bottom: 2em;
-    .infoHeading{
-    
+
+    .infoHeading {
+
         @extend .regular-heading-m-16-;
         text-align: left;
         color: #172026;
         font-weight: bold;
-    
-   
-}
+
+
+    }
 }
 
 
@@ -159,34 +164,34 @@
 
     p {
         text-align: left;
-font: normal normal normal 16px/24px Muli;
-letter-spacing: 0px;
-color: #535965;
-opacity:1;
+        font: normal normal normal 16px/24px Muli;
+        letter-spacing: 0px;
+        color: #535965;
+        opacity: 1;
     }
-    h4{ 
+
+    h4 {
         @extend .regular-heading-m-16-;
         color: #172026;
-       margin: 1em 0 1em 0;
-        // font-family: Muli;
-        // font-size: 14px;
-        // font-style: normal;
+        margin: 1em 0 1em 0;
+        
         font-weight: bold;
-        // letter-spacing: 0;
-        // line-height: 21px;
+        
     }
 }
 
 .follow {
+    // margin-top: 2em;
     background-color: #47b5ff;
     border-radius: .125rem;
     padding: 1.5em 1em 0;
     text-align: center;
     position: relative;
-    height: 22rem;
-    width: 20rem;
+    height: 20rem;
+    width: 18rem;
 
-    h2 {
+    p {
+        @extend  .display-l-36-;
         text-align: center;
         font: normal normal 600 36px/45px Source Serif Pro;
         letter-spacing: 0px;
@@ -199,31 +204,37 @@ opacity:1;
 
         padding: 0 1em;
 
-        width: 6rem;
-        height: 3rem;
+        width: 5rem;
+        height: 2rem;
     }
 }
 
-.max-h{
+.max-h {
     text-align: center;
+
 }
+
 .check-Out {
     h1 {
+        padding-top: 1em;
+
         @extend .display-xl-48-dekstop-only;
     }
 
     .bottom-line {
         margin: auto;
         height: 0.5rem;
+        margin-bottom: 1em;
 
         width: 7rem;
         background-color: $primary-brand;
         border-radius: 0.25rem;
     }
 }
+
 .order-p {
     p {
-        margin: 1em 0 1em 0;
+        
         line-height: 2em;
         @extend .regualr-body-m-16-;
         color: #535965;
