--- a/src/ShoppingBag/_shoppingCart.scss
+++ b/src/ShoppingBag/_shoppingCart.scss
@@ -16,6 +16,7 @@
 
  
      .shop-head {
+      margin: 1em 0 1em 0;
          text-align: center;
  
          h1 {
@@ -36,9 +37,9 @@
     
      .productimage {
         
-         max-width: 8rem;
-         height: 20%;
-         padding: 1em;
+      width: 110px;
+      height: 120px;
+      max-width: 100%;
         
      }
     
@@ -126,7 +127,7 @@
 
 
      .shopbagbutton{
-@extend .regular-body-s-14-;
+      @extend .regular-body-s-14-;
       color: white;
       width: 14rem;
       height: 3rem;
