--- a/src/component/_BannerThird.scss
+++ b/src/component/_BannerThird.scss
@@ -1,76 +1,9 @@
-.banner1{
-    display: flex;
 
-
-
-    img
-    {
-       padding: 1rem  0px;
-       flex: 2;
-       object-fit: cover;
-       max-width: 100%;
-       width: 550px;
-       height: 400px;      
-        
-    }
-}
-.breath{
-  height: 20%;
-}
-.banner1-left
-{
-    @extend .display-xl-48-dekstop-only ;
-    position: relative;
-    text-align: center;
-    color: white;
-    width: 554px;
-    height: 432px;
-    max-width: 100%;
-    object-fit: cover;
-    padding: 0.5em;
-    flex: 1;
-    background-color:#1B252C;
-
-    h1{
-        @extend .display-xl-48-dekstop-only ;
-    }
-    p{
-        @extend .display-s-20-;
-    }
- 
-  .shop-D {
-    @extend .regular-heading-s-14-;
-    color: white;
-    background-color:#1B252C;
-    border: 2px solid #FFFFFF;
-    width: 14rem;
-    padding: 1em;
-    border-radius: 0.75em;
-    opacity: 100%;
-  }
-  
-}
-.banner1-bottom
-{
-
-    @extend .display-xl-48-dekstop-only ;
-    position: absolute;
-    margin: auto;
-   
-    background-color:  $primary-brand;
-  
-    right: 74%;
-    transform: translateX(-50%);
-    bottom: 25%;
-    
-
-
-
-}
 
 .mapiconWrapper {
   position: absolute;
   left: 0%;
+  padding-left: 58%;
   bottom: 10%;
   display: flex;
   flex-direction: column;
@@ -78,111 +11,158 @@
  margin-left: -1em;
 
   .mapPinImg {
-      width: 14%;
-      margin-bottom: 0.75em;
+ 
+    margin-bottom: 1em;
+      width: 33px;
+      height: 40px;
+      margin-left: 2rem;
 
   }
 
   .mapMaxHeaderImg {
-      width: 28%;
-      margin-left: -1em;
+      width: 129px;
+  height: 12px;
+  margin-left: -1em;
 
   }
-
 }
 
-// .footerBanner {
 
-//   display: flex;
-//   flex-direction: row-reverse;
-//   margin: 3em auto 5em auto;
+.banner4-main-div {
+  position: relative;
+  display: flex;
+}
 
+.climed-man-image {
+  width: 60%;
+  padding-top: 1%;
 
+  img {
+      width: 100%;
+      height: 400px;
+  }
+}
 
-//   img {
+.banner4-box {
+  position: relative;
+  width: 40%;
+  height: 432px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 5%;
+  background-color: #1B252C;
 
-//       width: calc(60% - 1rem);
+  h4 {
+    margin: 2em 0 1em 0;
+      text-align: left;
+      font: normal normal 600 48px/60px Source Serif Pro;
+      letter-spacing: 0px;
+      color: #FFFFFF;
+      opacity: 1;
+  }
 
-//   }
+  p {
+    margin-bottom: 0.5em;
+      text-align: left;
+      font: normal normal 600 20px/25px Muli;
+      letter-spacing: 0px;
+      color: #FFFFFF;
+      opacity: 1;
+  }
 
-
-
-//   .footerBannerInner {
-//       position: relative;
-//       background-color: black;
-//       padding: 2em 0;
-//       width: 40%;
-//       display: flex;
-//       justify-content: center;
-//       align-items: center;
-//       flex-direction: column;
-
-
-
-
-
-//       h2 {
-//           @extend .display-l-36-;
-//           color: $white;
-//           text-align: center;
-//           padding: 0 !important;
-
-
-
-//       }
-
-//       p {
-//           @extend .regular-body-s-14-;
-//           color: $white;
-//           padding: 1em;
-//           // margin: 1em 0;
-
-//       }
-
-//       .shopDevicesBtn {
-
-        
-//           color: white;
-//           background: transparent;
-//           border: 1px solid white;
-//           display: flex;
-//           justify-content: start;
-
-//       }
-
-//       .mapiconWrapper {
-//           position: absolute;
-//           left: 0%;
-//           bottom: 10%;
-//           display: flex;
-//           flex-direction: column;
-//           align-items: flex-start;
-//          margin-left: -1em;
-
-//           .mapPinImg {
-//               width: 5%;
-//               margin-bottom: 0.75em;
-
-//           }
-
-//           .mapMaxHeaderImg {
-//               width: 20%;
-//               margin-left: -1em;
-
-//           }
-
-//       }
+  button {
+    margin: 0.5em 0 0.5em 0;
+      width: 200px;
+      height: 40px;
+      border: 2px solid #FFFFFF;
+      background: none;
+      text-align: center;
+      font: normal normal bold 14px/16px Muli;
+      letter-spacing: 0px;
+      color: #FFFFFF;
+      text-transform: uppercase;
+      border-radius: 10px;
+      opacity: 1;
+  }
+}
 
 
-//   }
+.banner4-mobile-box {
+  transform: translateY(-60px);
+  width: 80%;
+  height: 310px;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #1B252C;
+
+  h4 {
+      text-align: center;
+      font: normal normal 600 36px/45px Source Serif Pro;
+      letter-spacing: 0px;
+      color: #FFFFFF;
+      opacity: 1;
+  }
+
+  p {
+    margin-top: 1em;
+    margin-bottom: 1em;
+      text-align: center;
+      font: normal normal 600 20px/24px Muli;
+      letter-spacing: 0.6px;
+      color: #FFFFFF;
+      opacity: 1;
+  }
+
+  button {
+      width: 180px;
+      height: 40px;
+      border: 2px solid #FFFFFF;
+      border-radius: 10px;
+      background: none;
+      text-align: center;
+      font: normal normal bold 14px/16px Muli;
+      letter-spacing: 0px;
+      color: #FFFFFF;
+      text-transform: uppercase;
+      opacity: 1;
+  }
+}
 
 
+@media (max-width : 786px) {
+  .banner4-main-div{
+      img{
+          width: 100%;
+      }
+  }
+  .mapiconWrapper{
+      padding-left: 22%;
+  transform: translateY(356px);
+  }
+}
+@media (max-width : 786px) {
+  .climed-man-image {
+      width: 100%;
+  }
 
+  .banner4-box {
+      display: none;
+  }
 
+  .banner4-main-div {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+  }
+  .banner4-mobile-box{
+      display: flex;
+  }
+}
 
-//   .standingMan {
-//       padding: 1em 0 1em 0;
-
-//   }
-
-// }
+@media (min-width : 786px) {
+  .banner4-mobile-box {
+      display: none;
+  }
+}
