--- a/src/component/_Bannermid.scss
+++ b/src/component/_Bannermid.scss
@@ -1,24 +1,20 @@
-// .container{
-//     padding-left: 12rem;
-//     padding-right: 12rem;
-// }
+
 .categories-main{
    
     position: relative;
-    // left: 10em;
+    
     background-color: white;
-    // width: 80%;
+  
     top: -2em;
    .banner-mid{
     padding-right: 1rem;
    }
 }
-.mid-container{
-    position: relative;
-}
+
 .category-img img{
     width: 100%;
-    height: 232px;
+    height: 170px;
+    max-width: 100%;
     
    }
 
@@ -42,6 +38,9 @@
   
  
  }
-
-
-
+@media(max-width:786px) {
+    .categories-main{
+        transform: translateY(254px);
+    }
+   
+}
